--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.3",
+    "@chakra-ui/icons": "^1.0.1",
+    "@chakra-ui/react": "^1.0.1",
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11.0.0",
+    "framer-motion": "^2.9.5",
+    "graphql": "^15.4.0",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
